# mini_opt

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  LICENSE.txt  README.md  build.ps1
.github/workflows/: linux.yml  windows.yml
cmake/: FindEigen.cmake
dependencies/: CMakeLists.txt
include/: assertions.hpp  mini_opt.hpp  nonlinear.hpp  qp.hpp  residual.hpp  transform_chains.hpp
include/mini_opt/: assertions.hpp  logging.hpp  math_utils.hpp  nonlinear.hpp  qp.hpp  residual.hpp  serialization.hpp  structs.hpp  tracing.hpp  transform_chains.hpp
scripts/: make.ps1
source/: assertions.cc  logging.cc  math_utils.cc  mini_opt.cc  nonlinear.cc  qp.cc  residual.cc  serialization.cc  structs.cc  tracing.cc  transform_chains.cc
test/: CMakeLists.txt  math_utils_test.cc  mini_opt_test.cc  nonlinear_test.cc  qp_test.cc  residual_test.cc  test_utils.cc  test_utils.hpp  transform_chains.cc  transform_chains.hpp  transform_chains_test.cc
